# DP32-asm

./: LICENSE  README.md  pyproject.toml
examples/: heapsort.dasm
src/: abstracts.py  assembler.py  codegen.py  codegenutils.py  command.py  dbgassembler.py  errorwatcher.py  lexer.py  main.py  optable.py  parser.py  preprocessor.py
src/dp32assembler/: abstracts.py  assembler.py  codegenutils.py  command.py  dbgassembler.py  hexutils.py  lexer.py  main.py  optable.py  parser.py  preprocessor.py
tests/: test_branches.py  test_markers.py  test_raw_data.py  test_single_instruction_assembling.py
