[project]
name = "dp32-asm"
version = "0.2.1"
description = "Simple (stupid) assembler for DP32 processor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sly>=0.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = [
  "tests"
]
pythonpath = [
  ".", "src"
]
