[project]
name = "dp32-asm"
authors = [{name="ElectronixTM"}]
version = "0.2.1"
description = "Simple (stupid) assembler for DP32 processor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sly>=0.5",
]
license = "Apache-2.0"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = [
  "tests"
]
pythonpath = [
  ".", "src"
]

[project.scripts]
dp32asm = "main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
